fix: 안드로이드 기반 오류 수정