@@ -7,8 +7,8 @@ import java.util.function.Consumer;
 public class CheckData {
 
     public void checkData(ArrayList<String> arrayList) {
-        getInput(InputValidator::validateStartInput, arrayList.getFirst());
-        getInput(InputValidator::validateEndInput, arrayList.getLast());
+        getInput(InputValidator::validateStartInput, arrayList.get(0));
+        getInput(InputValidator::validateEndInput, arrayList.get(arrayList.size() - 1));
     }
 
     public void getInput(Consumer<String> validator, String input) {
